--- a/bc_project_workflow/views/project_task_test_list_views.xml
+++ b/bc_project_workflow/views/project_task_test_list_views.xml
@@ -102,20 +102,22 @@
         <field name="model">project.task.test</field>
         <field name="arch" type="xml">
             <form string="Form_types">
+                <header>
+                    <field name="validated" widget="statusbar"/>
+                </header>
                 <sheet>
                     <group>
                         <field name="name"/>
                         <field name="is_template"/>
                         <field name="template_id"/>
                         <field name="create_date" readonly="1"/>
-                        <field name="task_id"/>
-                        <field name="validated"/>
+                        <field name="task_id" readonly="1"/>
                         <field name="parent_id" readonly="1" invisible="parent_id == False"/>
                         <field name="childtest_count" invisible="childtest_count == 0" readonly="1" />
                     </group>
                     <notebook>
                         <page string="Test procedure">  
-                            <field name="html_file" string="Upload HTML Template" widget="binary"/>             
+                            <field name="html_file" widget="binary"/>             
                             <field name="description"/>
                         </page>
                         <page string="Refused Justify" invisible="validated != 'refused'">
