--- a/bc_project_workflow/views/project_release_list.xml
+++ b/bc_project_workflow/views/project_release_list.xml
@@ -48,7 +48,12 @@
                     <button class="btn btn-primary" name="draft_button" type="object" invisible="state != 'cancel'">Draft</button>
                     <field name="state"  widget="statusbar"/>
                 </header>
-                <sheet>
+                <sheet string="Release">
+                    <div class="oe_button_box" name="button_box">
+                        <button name="action_get_task_record" type="object" class="oe_stat_button" icon="fa-tasks" invisible="not task_ids">
+                            <field name="task_count" widget="statinfo"/>
+                        </button>
+                    </div>
                     <group>
                         <field name="name" readonly="state != 'draft'"/>
                         <field name="project_id" widget="many2one" readonly="state != 'draft'">
