--- a/bc_project_workflow/views/project_task_test_list_views.xml
+++ b/bc_project_workflow/views/project_task_test_list_views.xml
@@ -106,6 +106,11 @@
                     <field name="validated" widget="statusbar"/>
                 </header>
                 <sheet>
+                    <div class="oe_button_box" name="button_box">
+                        <button name="action_get_child_record" type="object" class="oe_stat_button" icon="fa-tasks" invisible="not child_ids">
+                            <field name="childtest_count" widget="statinfo"/>
+                        </button>
+                    </div>
                     <group>
                         <field name="name"/>
                         <field name="is_template"/>
